snapshots/care/data4life/hc-util-sdk-kmp/error/1.13.0-SNAPSHOT/error-1.13.0-20220817.130540-1.jar.sha256
48dda30356185b45da063f884e116d36d7f206a647f8faff58a14955cb49c337